# aws-lambda-event-models

./: .travis.yml  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
aws_lambda_event_models/: __init__.py
src/aws_lambda_event_models/: __init__.py  types.py
src/aws_lambda_event_models/newsfragments/: 1.feature  4.feature
tests/: aws_lambda_event_models_test.py  types_test.py
