[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.towncrier]
package = "aws_lambda_event_models"
package_dir = "src"
filename = "NEWS.rst"
title_format = "{version} ({project_date})"
issue_format = "[#{issue}](https://github.com/KeltonKarboviak/aws-lambda-event-models/issues/{issue})"
wrap = true
all_bullets = true

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
